--- a/catalog.html
+++ b/catalog.html
@@ -65,16 +65,16 @@
           <legend>СЕТКА:</legend>
           <ul>
             <li class="filter-option">
-              <input id="filter-adaptive" class="visually-hidden filter-input filter-input-radio" type="radio" name="grid" value="adaptive" checked>
-              <label for="filter-adaptive">Адаптивная</label>
+              <input id="filter-adaptive" class="visually-hidden filter-input filter-input-radio" type="radio" name="grid" value="adaptive" tabindex="0" checked>
+              <label for="filter-adaptive" tabindex="0">Адаптивная</label>
             </li>
             <li class="filter-option">
-              <input id="filter-fixed" class="visually-hidden filter-input filter-input-radio" type="radio" name="grid" value="fixed">
-              <label for="filter-fixed">Фиксированная</label>
+              <input id="filter-fixed" class="visually-hidden filter-input filter-input-radio" type="radio" name="grid" value="fixed" tabindex="0">
+              <label for="filter-fixed" tabindex="0">Фиксированная</label>
             </li>
             <li class="filter-option">
-              <input id="filter-rubber" class="visually-hidden filter-input filter-input-radio" type="radio" name="grid" value="rubber">
-              <label for="filter-rubber">Резиновая</label>
+              <input id="filter-rubber" class="visually-hidden filter-input filter-input-radio" type="radio" name="grid" value="rubber" tabindex="0">
+              <label for="filter-rubber" tabindex="0">Резиновая</label>
             </li>
           </ul>
         </fieldset>
@@ -84,23 +84,23 @@
           <ul>
             <li class="filter-option">
               <input id="filter-slider" class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="slider" checked>
-              <label for="filter-slider">Слайдер</label>
+              <label for="filter-slider" tabindex="0">Слайдер</label>
             </li>
             <li class="filter-option">
               <input id="filter-advantages" class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="advantages">
-              <label for="filter-advantages">Блок преимуществ</label>
+              <label for="filter-advantages" tabindex="0">Блок преимуществ</label>
             </li>
             <li class="filter-option">
               <input id="filter-news" class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="news" checked>
-              <label for="filter-news">Новости</label>
+              <label for="filter-news" tabindex="0">Новости</label>
             </li>
             <li class="filter-option">
               <input id="filter-gallery" class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="gallery">
-              <label for="filter-gallery">Галерея</label>
+              <label for="filter-gallery" tabindex="0">Галерея</label>
             </li>
             <li class="filter-option">
               <input id="filter-basket" class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="basket">
-              <label for="filter-basket">Корзина</label>
+              <label for="filter-basket" tabindex="0">Корзина</label>
             </li>
           </ul>
         </fieldset>
@@ -221,7 +221,7 @@
             <h3> NЁRDS DESIGN STUDIO</h3>
             <p class="address-info">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
             <p class="tel"> +7 (812) 275-75-75</p>
-            <a class="contacts-us button" href="#">НАПИШИТЕ НАМ</a>
+            <a class="contacts-us button" href="form.html">НАПИШИТЕ НАМ</a>
           </div>
         </div>
       </section>
@@ -250,7 +250,7 @@
     <div class="contacts-title">
       <h2>Напишите нам</h2>
       <a title="Закрыть">
-      <svg class="modal-cross" xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21"><path fill="#FB565A" d="M13.328 10.5l7.371-7.371a1.003 1.003 0 0 0 0-1.414L19.285.3a1.003 1.003 0 0 0-1.414 0L10.5 7.672 3.129.301a1.003 1.003 0 0 0-1.414 0L.301 1.715a1.003 1.003 0 0 0 0 1.414L7.672 10.5.301 17.871a1.003 1.003 0 0 0 0 1.414l1.415 1.414a1.003 1.003 0 0 0 1.414 0l7.371-7.371 7.371 7.371a1.003 1.003 0 0 0 1.414 0l1.414-1.414a1.003 1.003 0 0 0 0-1.414L13.328 10.5z"/></svg>
+      <svg class="modal-cross" xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21" tabindex="0"><path fill="#FB565A" d="M13.328 10.5l7.371-7.371a1.003 1.003 0 0 0 0-1.414L19.285.3a1.003 1.003 0 0 0-1.414 0L10.5 7.672 3.129.301a1.003 1.003 0 0 0-1.414 0L.301 1.715a1.003 1.003 0 0 0 0 1.414L7.672 10.5.301 17.871a1.003 1.003 0 0 0 0 1.414l1.415 1.414a1.003 1.003 0 0 0 1.414 0l7.371-7.371 7.371 7.371a1.003 1.003 0 0 0 1.414 0l1.414-1.414a1.003 1.003 0 0 0 0-1.414L13.328 10.5z"/></svg>
         </a>
     </div>
       <form class="contacts-form" action="https://echo.htmlacademy.ru" method="post">
