--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
           <input class="visually-hidden" type="radio" id="product-2" name="toggle">
           <input class="visually-hidden" type="radio" id="product-3" name="toggle">
         <div class="slider-controls">
-          <label class="slider-controls-item slider-controls-item--1" for="product-1">Первый</label>
-          <label class="slider-controls-item slider-controls-item--2" for="product-2">Второй</label>
-          <label class="slider-controls-item slider-controls-item--3" for="product-3">Третий</label>
+          <label class="slider-controls-item slider-controls-item--1" for="product-1" tabindex="0">Первый</label>
+          <label class="slider-controls-item slider-controls-item--2" for="product-2" tabindex="0">Второй</label>
+          <label class="slider-controls-item slider-controls-item--3" for="product-3" tabindex="0">Третий</label>
         </div>
         <ul class="slider-list">
           <li class="slider-item">
@@ -144,7 +144,7 @@
             <h3> NЁRDS DESIGN STUDIO</h3>
             <p class="address-info">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
             <p class="tel"> +7 (812) 275-75-75</p>
-            <a class="contacts-us button" href="#">НАПИШИТЕ НАМ</a>
+            <a class="contacts-us button" href="form.html">НАПИШИТЕ НАМ</a>
           </div>
         </div>
       </section>
@@ -174,7 +174,7 @@
     <div class="contacts-title">
       <h2>Напишите нам</h2>
       <a title="Закрыть">
-      <svg class="modal-cross" xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21"><path fill="#FB565A" d="M13.328 10.5l7.371-7.371a1.003 1.003 0 0 0 0-1.414L19.285.3a1.003 1.003 0 0 0-1.414 0L10.5 7.672 3.129.301a1.003 1.003 0 0 0-1.414 0L.301 1.715a1.003 1.003 0 0 0 0 1.414L7.672 10.5.301 17.871a1.003 1.003 0 0 0 0 1.414l1.415 1.414a1.003 1.003 0 0 0 1.414 0l7.371-7.371 7.371 7.371a1.003 1.003 0 0 0 1.414 0l1.414-1.414a1.003 1.003 0 0 0 0-1.414L13.328 10.5z"/></svg>
+      <svg class="modal-cross" xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21" tabindex="0"><path fill="#FB565A" d="M13.328 10.5l7.371-7.371a1.003 1.003 0 0 0 0-1.414L19.285.3a1.003 1.003 0 0 0-1.414 0L10.5 7.672 3.129.301a1.003 1.003 0 0 0-1.414 0L.301 1.715a1.003 1.003 0 0 0 0 1.414L7.672 10.5.301 17.871a1.003 1.003 0 0 0 0 1.414l1.415 1.414a1.003 1.003 0 0 0 1.414 0l7.371-7.371 7.371 7.371a1.003 1.003 0 0 0 1.414 0l1.414-1.414a1.003 1.003 0 0 0 0-1.414L13.328 10.5z"/></svg>
         </a>
     </div>
       <form class="contacts-form" action="https://echo.htmlacademy.ru" method="post">
