--- a/catalog.html
+++ b/catalog.html
@@ -272,6 +272,6 @@
       </form>
     </section>
 
-    <script src="js/script.js" type="text/javascript"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
