--- a/index.html
+++ b/index.html
@@ -196,6 +196,6 @@
       </form>
     </section>
 
-    <script src="js/script.js" type="text/javascript"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
