--- a/catalog.html
+++ b/catalog.html
@@ -43,7 +43,7 @@
 
         <form class="filter" method="get" action="https://echo.htmlacademy.ru">
           <fieldset class="cost">
-            <legend>СТОИМОСТЬ:</legend>
+            <legend>Стоимость:</legend>
             <div class="cost-range">
                 <div class="range-controls">
                   <div class="scale">
@@ -54,15 +54,15 @@
                 </div>
               </div>
             <div class="price-controls">
-                <label for="min-price">ОТ <input id="min-price" type="number" min="0" max="25000" value="0"></label>
+                <label for="min-price">От <input id="min-price" type="number" min="0" max="25000" value="0"></label>
 
-                <label for="max-price">ДО <input id="max-price" type="number" min="0" max="25000" value="15000"></label>
+                <label for="max-price">До <input id="max-price" type="number" min="0" max="25000" value="15000"></label>
               </div>
           </fieldset>
 
 
         <fieldset class="filter-net">
-          <legend>СЕТКА:</legend>
+          <legend>Сетка:</legend>
           <ul>
             <li class="filter-option">
               <input id="filter-adaptive" class="visually-hidden filter-input filter-input-radio" type="radio" name="grid" value="adaptive" tabindex="0" checked>
@@ -80,7 +80,7 @@
         </fieldset>
 
         <fieldset class="filter-advantages">
-          <legend>ОСОБЕННОСТИ:</legend>
+          <legend>Особенности:</legend>
           <ul>
             <li class="filter-option">
               <input id="filter-slider" class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="slider" checked>
@@ -105,19 +105,19 @@
           </ul>
         </fieldset>
         <button type="submit" class="button filter-button">
-            ПОКАЗАТЬ
+            Показать
         </button>
       </form>
       </section>
 
       <div class="sorting-catalog">
           <div class="sorting">
-            <p>СОРТИРОВАТЬ:</p>
+            <p>Сортировать:</p>
 
             <ul class="sorting-option">
-              <li><a class="open-option">ПО ЦЕНЕ</a></li>
-              <li><a href="#">ПО ТИПУ</a></li>
-              <li><a href="#">ПО НАЗВАНИЮ</a></li>
+              <li><a class="open-option">По цене</a></li>
+              <li><a href="#">По типу</a></li>
+              <li><a href="#">По названию</a></li>
             </ul>
 
             <ul class="sorting-pointer">
@@ -139,9 +139,9 @@
               <path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
                 <img src="img/sedona.jpg" width="360" height="576" alt="сайт SENODA">
               <div class="add-info">
-                  <h4><a class="catalog-title" href="#">SEDONA</a></h4>
+                  <h4><a class="catalog-title" href="#">Sedona</a></h4>
                     <p>Информационный сайт для туристов</p>
-                      <a class="button catalog-list-button" href="#">9 900 РУБ.</a>
+                      <a class="button catalog-list-button" href="#">9 900 Руб.</a>
               </div>
           </li>
 
@@ -150,9 +150,9 @@
               <path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
                 <img src="img/pink.jpg" width="360" height="576" alt="сайт PINK">
                 <div class="add-info">
-                  <h4><a class="catalog-title" href="#">PINK APP</a></h4>
+                  <h4><a class="catalog-title" href="#">Pink app</a></h4>
                     <p>Продуктовый лендинг приложения для iOS и Android</p>
-                      <a class="button catalog-list-button" href="#">9 900 РУБ.</a>
+                      <a class="button catalog-list-button" href="#">9 900 Руб.</a>
                 </div>
           </li>
 
@@ -161,9 +161,9 @@
               <path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
                 <img src="img/borodinski.jpg" width="360" height="576" alt="сайт BORODINSKI">
               <div class="add-info">
-                <h4><a class="catalog-title" href="#">BARBERSHOP</a></h4>
+                <h4><a class="catalog-title" href="#">Barbershop</a></h4>
                   <p>Сайт салона красоты. Для мужчин, да.</p>
-                    <a class="button catalog-list-button" href="#">9 900 РУБ.</a>
+                    <a class="button catalog-list-button" href="#">9 900 Руб.</a>
               </div>
           </li>
 
@@ -172,9 +172,9 @@
               <path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
                 <img src="img/mishka.jpg" width="360" height="576" alt="сайт MISHKA">
                 <div class="add-info">
-                  <h4><a class="catalog-title" href="#">MISHKA</a></h4>
+                  <h4><a class="catalog-title" href="#">Mishka</a></h4>
                     <p>Интернет-магазин вязаных игрушек</p>
-                      <a class="button catalog-list-button" href="#">9 900 РУБ.</a>
+                      <a class="button catalog-list-button" href="#">9 900 Руб.</a>
                 </div>
           </li>
 
@@ -183,9 +183,9 @@
               <path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
                 <img src="img/aplus.jpg" width="360" height="576" alt="сайт A+">
               <div class="add-info">
-                <h4><a class="catalog-title" href="#">A PLUS</a></h4>
+                <h4><a class="catalog-title" href="#">A plus</a></h4>
                   <p>Лендинг курсов повышения квалификации</p>
-                    <a class="button catalog-list-button" href="#">9 900 РУБ.</a>
+                    <a class="button catalog-list-button" href="#">9 900 Руб.</a>
               </div>
           </li>
 
@@ -194,9 +194,9 @@
               <path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
                 <img src="img/kvast.jpg" width="360" height="576" alt="сайт КВАСТ">
                 <div class="add-info">
-                  <h4><a class="catalog-title" href="#">КВАСТ</a></h4>
+                  <h4><a class="catalog-title" href="#">Кваст</a></h4>
                     <p>Промо-сайт производителя крафтового кваса</p>
-                      <a class="button catalog-list-button" href="#">9 900 РУБ.</a>
+                      <a class="button catalog-list-button" href="#">9 900 Руб.</a>
                 </div>
             </li>
            </ul>
@@ -210,7 +210,7 @@
               <li><a class="open-pagination" aria-label="открыта страница">1</a></li>
               <li><a href="#" aria-label="переход на страницу">2</a></li>
               <li><a href="#" aria-label="переход на страницу">3</a></li>
-              <li><a class="next" href="#" aria-label="переход на страницу">СЛЕДУЮЩАЯ</a></li>
+              <li><a class="next" href="#" aria-label="переход на страницу">Следующая</a></li>
             </ul>
         </div>
 
@@ -218,10 +218,10 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533207!2d30.320858716285002!3d59.938716481876256!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1550573865197" width="1200" height="416"  style="border:0" allowfullscreen></iframe>
         <div class="container">
           <div class="address">
-            <h3> NЁRDS DESIGN STUDIO</h3>
+            <h3> Nёrds design studio</h3>
             <p class="address-info">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-            <p class="tel"> +7 (812) 275-75-75</p>
-            <a class="contacts-us button" href="form.html">НАПИШИТЕ НАМ</a>
+            <p class="tel" href="tel:+78122757575">тел. +7 (812) 275-75-75</p>
+            <a class="contacts-us button" href="form.html">Напишите нам</a>
           </div>
         </div>
       </section>
@@ -268,10 +268,10 @@
           <label for="contacts-textletter">Текст письма:</label>
           <textarea class="contacts-user-text" id="contacts-textletter" name="textletter" cols="100" rows="5" placeholder="В свободной форме"></textarea>
         </p>
-        <button class="button" type="submit">ОТПРАВИТЬ</button>
+        <button class="button" type="submit">Отправить</button>
       </form>
     </section>
 
-    <script src="js/script.js"></script>
+    <script src="js/script-min.js"></script>
   </body>
 </html>
