--- a/index.html
+++ b/index.html
@@ -74,23 +74,23 @@
 
           <li class="features-item">
               <img src="img/logo-site.png" width="300" height="146" alt="Логотип Сайт">
-            <h3>ВЕБ-САЙТЫ</h3>
+            <h3>Веб-сайты</h3>
             <p>Мир никогда не будет прежним после того как увидит наш сайт!</p>
-            <a class="button button-1" href="#">ЗАКАЗАТЬ</a>
+            <a class="button button-1" href="#">Заказать</a>
           </li>
 
           <li class="features-item">
               <img src="img/logo-app.png" width="300" height="146" alt="Логотип Приложения">
-            <h3>ПРИЛОЖЕНИЯ</h3>
+            <h3>Приложения</h3>
             <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-            <a class="button button-2" href="#">ЗАКАЗАТЬ</a>
+            <a class="button button-2" href="#">Заказать</a>
           </li>
 
           <li class="features-item">
               <img src="img/logo-presentation.png" width="300" height="146" alt="Логотип Презентация">
-            <h3>ПРЕЗЕНТАЦИИ</h3>
+            <h3>Презентации</h3>
             <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-            <a class="button button-3" href="#">ЗАКАЗАТЬ</a>
+            <a class="button button-3" href="#">Заказать</a>
           </li>
         </ul>
       </div>
@@ -100,9 +100,9 @@
           <div class="container">
         <div class="about-us-desc">
           <div class="description-text">
-            <p class="about-us-description">Мы - маленькая, но гордая дизайн-студия из Краснодара.</p>
+            <p class="about-us-description">Мы — маленькая, но гордая дизайн-студия из Краснодара. </p>
             <p class="about-us-principles">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
-            <h3>ВЫПОЛНЯЕМ ЗАКАЗЫ НА РАЗРАБОТКУ:</h3>
+            <h3>Выполняем заказы на разработку:</h3>
             <ul class="about-us-description-list">
               <li>Веб-сайтов любой сложности</li>
               <li>Мобильных приложений для iOS и Android</li>
@@ -112,7 +112,7 @@
 
           <div class="description-logo-table">
             <img src="img/nerds-illustration.png" alt="" width="360" height="208">
-            <p class="table-title">С 2004 ГОДА ЛЮБИМ ТОЧНОСТЬ ВО ВСЕМ:</p>
+            <p class="table-title">С 2004 года любим точность во всем:</p>
             <table class="description-table">
               <tr class="percent">
                 <td>146<sup>%</sup></td>
@@ -128,12 +128,14 @@
           </div>
         </div>
 
-        <ul class="clients">
+        <div class="clients">
+          <ul class="clients-list">
          <li class="clients-logo"><a href="https://htmlacademy.ru/intensive/htmlcss" aria-label="переход на сайт htmlacademy"><img src="img/htmlacademy-logo.png" alt="логотип сайта htmlacademy" width="199" height="68"></a></li>
          <li class="clients-logo"><a href="#" aria-label="переход на сайт бородински"><img src="img/borodinski-logo.png" alt="логотип сайта бородински" width="209" height="90"></a></li>
          <li class="clients-logo"><a href="#" aria-label="переход на сайт pink"><img src="img/pink-logo.png" alt="логотип сайта pink" width="185" height="52"></a></li>
-         <li><a href="#" aria-label="переход на сайт mishka"><img src="img/mishka-logo.png" alt="логотип сайта mishka" width="173" height="84"></a></li>
-       </ul>
+         <li class="clients-logo"><a href="#" aria-label="переход на сайт mishka"><img src="img/mishka-logo.png" alt="логотип сайта mishka" width="173" height="84"></a></li>
+        </ul>
+          </div>
        </div>
      </section>
 
@@ -141,10 +143,10 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533207!2d30.320858716285002!3d59.938716481876256!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1550573865197" width="1200" height="416"  style="border:0" allowfullscreen></iframe>
         <div class="container">
           <div class="address">
-            <h3> NЁRDS DESIGN STUDIO</h3>
+            <h3> Nёrds design studio</h3>
             <p class="address-info">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-            <p class="tel"> +7 (812) 275-75-75</p>
-            <a class="contacts-us button" href="form.html">НАПИШИТЕ НАМ</a>
+            <p class="tel" href="tel:+78122757575"> тел. +7 (812) 275-75-75</p>
+            <a class="contacts-us button" href="form.html">Напишите нам</a>
           </div>
         </div>
       </section>
@@ -192,10 +194,10 @@
           <label for="contacts-textletter">Текст письма:</label>
           <textarea class="contacts-user-text" id="contacts-textletter" name="textletter" cols="100" rows="5" placeholder="В свободной форме"></textarea>
         </p>
-        <button class="button" type="submit">ОТПРАВИТЬ</button>
+        <button class="button" type="submit">Отправить</button>
       </form>
     </section>
 
-    <script src="js/script.js"></script>
+    <script src="js/script-min.js"></script>
   </body>
 </html>
