--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,7 @@
     <title>Нёрдс: Каталог</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style-min.css" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
@@ -140,7 +140,7 @@
                 <img src="img/sedona.jpg" width="360" height="576" alt="сайт SENODA">
               <div class="add-info">
                   <h4><a class="catalog-title" href="#">Sedona</a></h4>
-                    <p>Информационный сайт для туристов</p>
+                    <p>Информационный сайт для&nbsp;туристов</p>
                       <a class="button catalog-list-button" href="#">9 900 Руб.</a>
               </div>
           </li>
@@ -162,7 +162,7 @@
                 <img src="img/borodinski.jpg" width="360" height="576" alt="сайт BORODINSKI">
               <div class="add-info">
                 <h4><a class="catalog-title" href="#">Barbershop</a></h4>
-                  <p>Сайт салона красоты. Для мужчин, да.</p>
+                  <p>Сайт салона красоты. Для&nbsp;мужчин, да.</p>
                     <a class="button catalog-list-button" href="#">9 900 Руб.</a>
               </div>
           </li>
@@ -173,7 +173,7 @@
                 <img src="img/mishka.jpg" width="360" height="576" alt="сайт MISHKA">
                 <div class="add-info">
                   <h4><a class="catalog-title" href="#">Mishka</a></h4>
-                    <p>Интернет-магазин вязаных игрушек</p>
+                    <p>Интернет-магазин вязаных&nbsp;игрушек</p>
                       <a class="button catalog-list-button" href="#">9 900 Руб.</a>
                 </div>
           </li>
@@ -220,7 +220,7 @@
           <div class="address">
             <h3> Nёrds design studio</h3>
             <p class="address-info">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-            <p class="tel" href="tel:+78122757575">тел. +7 (812) 275-75-75</p>
+            <a class="tel" href="tel:+78122757575">тел. +7 (812) 275-75-75</a>
             <a class="contacts-us button" href="form.html">Напишите нам</a>
           </div>
         </div>
