--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Нёрдс: Главная</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style-min.css" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
@@ -145,7 +145,7 @@
           <div class="address">
             <h3> Nёrds design studio</h3>
             <p class="address-info">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-            <p class="tel" href="tel:+78122757575"> тел. +7 (812) 275-75-75</p>
+            <a class="tel" href="tel:+78122757575"> тел. +7 (812) 275-75-75</a>
             <a class="contacts-us button" href="form.html">Напишите нам</a>
           </div>
         </div>
